Forum header fixed with describing text in the bottom - webinars also edited with spacing

--- a/ngStockOverflow/src/app/components/forum/forum.component.css
+++ b/ngStockOverflow/src/app/components/forum/forum.component.css
@@ -29,6 +29,13 @@ h6 {
   font-size: 12px;
 }
 
-/* .newFormy {
-  padding-top: 6px;
-} */
+h1 {
+  font-size: 100px;
+  font-style: bold;
+}
+
+
+h5 {
+  color: lightgrey;
+  font-style: italic;
+}
